@@ -57,7 +57,7 @@ blockface_equalise_illumination.m
 	
 blockface_find_frame_shifts.m
 
-	 blockface_find  frame_shifts  Find translation shifts between consecutive
+	 blockface_find_frame_shifts  Find translation shifts between consecutive
 	 blockface frames.
 	
 blockface_imread_gray.m
@@ -292,6 +292,11 @@ correct_light_blobs_in_microscope_mosaic.m
 
 	 CORRECT_LIGHT_BLOBS_IN_MICROSCOPE_MOSAIC  Correct the colour blob created
 	 by the microscope's light in each tile of a mosaic, e.g. for histology.
+	
+elastix_read_transf_result.m
+
+	 elastix_read_transf_result  Read the result image and transform
+	 parameters of a registration computed with elastix
 	
 fspecial3.m
 
